* Removed some leftover JS for removed chosen select - FIXED
* Map sticky option added now using font awesome icon and local-storage for settings - ADDED
* Google static map option added for single post map - ADDED
* Some text custom field types not applying validation pattern - FIXED
* Post images now uses image cover by default and gives option to change to x,y or none - CHANGED/ADDED

= 2.0.0.55 =
* "Elvyre - Retina Ready Wordpress Theme" layout compatibility for detail & archive pages - ADDED
* Geodir_Session class called in other addons can cause issues on frontend before upgrade - FIXED
* Transparent image multiratings not displaying right on less than full score - FIXED
* Post badge now has item specific classes - ADDED
* added some badge classes for extra features - ADDED
* OpenStreetMap map icon position not relative to zoom level - FIXED
* Conversion script can set categories to select instead of multiselect - FIXED

= 2.0.0.54 =
* Ninja Form looses post id and shows incorrect post title - FIXED
* Added some more deprecated functions to prevent undefined function errors - ADDED
* Update warning text added to readme change log section - ADDED
* Changed .hidden class to .gd-hidden to prevent conflicts - CHANGED

= 2.0.0.53 =
* Post author meta info missing closing wrapper div - FIXED
* Meta excerpt not being trimmed, now trimmed to default excerpt length of 55 words - FIXED

= 2.0.0.52 =
* Added some deprecated functions to prevent redeclare function error after update - FIXED
* Bumped PHP min version to 5.6 (new WP standard) - INFO

= v2.0.0.51 =
* First release of v2 on wp.org - INFO

v2.0.0.50
"Clear version numbers" tool should clear countries db version - ADDED
GD Listings block advanced settings breaks due to paging settings - FIXED
GD Listings view all link not working if multiple categories set - FIXED
Ninja Forms send message changed to show all fields (current forms should change message to include {all_fields_table} ) - CHANGED